examples/test/testpolicy7830.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7830
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key19: value18
      key11: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value6
          key30: value2
      podSelector:
        matchLabels:
          key43: value49
